// Copyright 2020 The golang.design Initiative authors.
// All rights reserved. Use of this source code is governed by
// a GNU GPL-3.0 license that can be found in the LICENSE file.

syntax = "proto3";

option go_package = ".;proto";

package proto;

service Midgard {
    rpc Ping(PingInput) returns (PingOutput) {}
    rpc GetFromUniversalClipboard(GetFromUniversalClipboardInput) returns (GetFromUniversalClipboardOutput) {}
    rpc PutToUniversalClipboard(PutToUniversalClipboardInput) returns (PutToUniversalClipboardOutput) {}
    rpc AllocateURL(AllocateURLInput) returns (AllocateURLOutput) {}
}

message PingInput {}
message PingOutput {
    string Message = 1;
}

enum ClipboardDataType {
    PlainText = 0;
    ImagePNG  = 1;
}
message GetFromUniversalClipboardInput {
}
message GetFromUniversalClipboardOutput {
    ClipboardDataType Type = 1;
    string Data = 2;
}

message PutToUniversalClipboardInput {
    ClipboardDataType Type = 1;
    string Data = 2;
}
message PutToUniversalClipboardOutput {
    string Message = 1;
}

enum SourceType {
    UniversalClipboard = 0;
    Attachment = 1;
}

message AllocateURLInput {
    SourceType Source = 1;
    string URI = 2;
    string Data = 3;
}
message AllocateURLOutput {
    string URL = 1;
    string Message = 2;
}
